--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "commit": "git-cz"
   },
   "dependencies": {
     "@fastify/multipart": "^8.3.0",
