--- a/.env.development
+++ b/.env.development
@@ -14,6 +14,7 @@ MINIO_ENDPOINT = localhost
 MINIO_PORT = 9000
 MINIO_ACCESS_KEY = moment
 MINIO_SECRET_KEY = moment666
+MINIO_BUCKET = moment
 
 REDIS_HOST = localhost
 REDIS_PORT = 6379
