--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.5",
     "socket.io": "^4.7.5",
     "svg-captcha": "^1.4.0",
     "uuid": "^10.0.0",
